force-app/main/default/objects/Citizen__c/Citizen__c.object-meta.xml
<CustomObject>
    <description>The golden identity record for a person who deals with the passport office. Applications keep their own copy of the applicant details as an immutable as-submitted snapshot; this object is the current truth about the person.</description>
    <label>Citizen</label>
    <nameField>
        <label>Citizen Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Citizens</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>