force-app/main/default/objects/Citizen__c/fields/Aadhaar_Token__c.field-meta.xml
<CustomField>
    <fullName>Aadhaar_Token__c</fullName>
    <inlineHelpText>Tokenised Aadhaar reference only. Never store the Aadhaar number itself (DPDP Act data minimisation). Would sit behind Shield Platform Encryption in production.</inlineHelpText>
    <label>Aadhaar Token</label>
    <length>64</length>
    <type>Text</type>
</CustomField>