force-app/main/default/objects/Citizen__c/fields/Aadhaar_Verified__c.field-meta.xml
<CustomField>
    <fullName>Aadhaar_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aadhaar Verified</label>
    <type>Checkbox</type>
</CustomField>