force-app/main/default/objects/Citizen__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Optional link to the Person Account for this citizen. Person Accounts are enabled in this org; this object holds the passport-office KYC view of the same person.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Citizen Profiles</relationshipLabel>
    <relationshipName>Citizen_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>