force-app/main/default/objects/Citizen__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>IF(ISBLANK(Date_of_Birth__c), 0, FLOOR((TODAY() - Date_of_Birth__c) / 365.25))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>