force-app/main/default/objects/Citizen__c/fields/Citizen_Reference__c.field-meta.xml
<CustomField>
    <fullName>Citizen_Reference__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Stable external reference used by integrations and by the demo data generator for idempotent upserts.</inlineHelpText>
    <label>Citizen Reference</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>