force-app/main/default/objects/Citizen__c/fields/Consent_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Consent_Timestamp__c</fullName>
    <inlineHelpText>When notification consent was captured. Retained for DPDP audit purposes.</inlineHelpText>
    <label>Consent Timestamp</label>
    <type>DateTime</type>
</CustomField>