force-app/main/default/objects/Citizen__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <inlineHelpText>PII. Restrict field-level security to staff who need it.</inlineHelpText>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>