force-app/main/default/objects/Citizen__c/fields/Is_Blacklisted__c.field-meta.xml
<CustomField>
    <fullName>Is_Blacklisted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blacklisted</label>
    <type>Checkbox</type>
</CustomField>