force-app/main/default/objects/Citizen__c/fields/Notification_Consent__c.field-meta.xml
<CustomField>
    <fullName>Notification_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Gates all outbound SMS/WhatsApp. No notification may be sent without this.</inlineHelpText>
    <label>Notification Consent</label>
    <type>Checkbox</type>
</CustomField>