force-app/main/default/objects/Citizen__c/validationRules/Blacklist_Requires_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Blacklist_Requires_Reason</fullName>
    <active>true</active>
    <description>Blacklisting blocks a citizen from applying, so the reason must be on the record for audit and for the officer who later reviews the block.</description>
    <errorConditionFormula>AND( Is_Blacklisted__c, ISBLANK(Blacklist_Reason__c) )</errorConditionFormula>
    <errorDisplayField>Blacklist_Reason__c</errorDisplayField>
    <errorMessage>Enter a Blacklist Reason before marking this citizen as blacklisted.</errorMessage>
</ValidationRule>