force-app/main/default/objects/Citizen__c/validationRules/DOB_Not_In_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>DOB_Not_In_Future</fullName>
    <active>true</active>
    <description>A citizen cannot be born in the future. Age__c and Is_Minor__c are derived from this field, so a future DOB corrupts every downstream minor/guardian rule.</description>
    <errorConditionFormula>AND( NOT(ISBLANK(Date_of_Birth__c)), Date_of_Birth__c &gt; TODAY() )</errorConditionFormula>
    <errorDisplayField>Date_of_Birth__c</errorDisplayField>
    <errorMessage>Date of Birth cannot be in the future. Enter the citizen’s actual date of birth.</errorMessage>
</ValidationRule>