force-app/main/default/objects/Citizen__c/listViews/Blacklisted.listView-meta.xml
<ListView>
    <fullName>Blacklisted</fullName>
    <columns>NAME</columns>
    <columns>Blacklist_Reason__c</columns>
    <columns>Mobile__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Citizen__c.Is_Blacklisted__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Blacklisted</label>
</ListView>